--- a/index.html
+++ b/index.html
@@ -2,11 +2,28 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-light_blue.min.css" /> 
     <title>Page Title</title>
   </head>
 
   <body>
-    <h1>Hello, World!</h1>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <h1>Hello, World!</h1> <br>
+    <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+        <i class="material-icons">add</i>
+      </button>
+    <center>
+    <form action="#">
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" id="sample1">
+          <label class="mdl-textfield__label" for="sample1">Text...</label>
+        </div>
+        <p style="width: 300px"> <input class="mdl-slider mdl-js-slider" type="range"
+        min="0" max="100" value="0" tabindex="0">
+      </form> </center> </p>
+  
   </body>
   
 </html>
